<?xml version="1.0"?>
<package format="2">
  <name>asb_description</name>
  <version>0.0.1</version>
  <description>asb URDF description</description>

  <author email="harvin.kaura@gmail.com">Harvin Kaura</author>

  <maintainer email="harvin.kaura@gmail.com">Harvin Kaura</maintainer>

  <license>CCSA2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roslaunch</build_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
